@@ -16,6 +16,7 @@ Verilator 4.201 devel
 * Add EOFNEWLINE warning when missing a newline at EOF.
 * Changed TIMESCALEMOD from error into a warning.
 * Verilated signals now use VlWide and VlPacked in place of C arrays.
+* Mark --no-relative-cfuncs as scheduled for deprecation.
 * Fix class unpacked-array compile error (#2774). [Iru Cai]
 * Fix exceeding command-line ar limit (#2834). [Yinan Xu]
 * Fix false $dumpfile warning on model save (#2834). [Yinan Xu]
